--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="#haut">Haut</a></li>
             <li><a href="#soleil">Soleil</a></li>
             <li><a href="#mercure">Mercure</a></li>
             <li><a href="#venus">Vénus</a></li>
@@ -24,7 +25,7 @@
         </ul>
     </nav>
 
-    <div class="bgimg-systeme_solaire">
+    <div class="bgimg-systeme_solaire" id="haut">
         <div class="caption">
             <span class="border1" data-text="SYSTEME SOLAIRE">SYSTEME SOLAIRE</span>
         </div>
@@ -32,57 +33,105 @@
 
     <div class="div-expl" id="soleil">
         <h3>Soleil</h3>
-        <p>Diamètre : 1 392 684 km</p>
-        <p>Masse : 1,9891 x 10 ^ 30 kg</p>
-        <p>Température à la surface : 5 500 °C</p>
+        <p>Diamètre : <span class="chiffres">1 392 684 km</span></p>
+        <p>Masse : <span class="chiffres">1,9891 x 10 ^ 30 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">5 500 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">149 600 000 km</span></p>
     </div>
     <div class="bgimg-soleil"></div>
 
     <div class="div-expl" id="mercure">
         <h3>Mercure</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">479 km</span></p>
+        <p>Masse : <span class="chiffres">3,3011 x 10 ^ 23 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-183 °C ... +427 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">90 000 000 km ... 210 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">87,95565 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">0</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">58,6462 jours</span></p>
     </div>
     <div class="bgimg-mercure"></div>
 
     <div class="div-expl" id="venus">
         <h3>Vénus</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">12 104 km</span></p>
+        <p>Masse : <span class="chiffres">4,8685 x 10 ^ 24 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">+446 °C ... +490 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">42 500 000 km ... 256 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">224,667 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">0</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">243,023 jours</span></p>
     </div>
     <div class="bgimg-venus"></div>
 
     <div class="div-expl" id="terre">
         <h3>Terre</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">12 756 km</span></p>
+        <p>Masse : <span class="chiffres">5,9736 x 10 ^ 24 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-93,2 °C ... +56,7 °C</span></p>
+        <p>Période de révolution : <span class="chiffres">365,256 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">1</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">23 h 56 min 4,084 s</span></p>
     </div>
     <div class="bgimg-terre"></div>
 
     <div class="div-expl" id="mars">
         <h3>Mars</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">6 792 km</span></p>
+        <p>Masse : <span class="chiffres">6,4185 x 10 ^ 23 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-143 °C ... +20 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">56 000 000 km ... 400 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">686,885 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">2</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">1,025 jour</span></p>
     </div>
     <div class="bgimg-mars"></div>
 
     <div class="div-expl" id="jupiter">
         <h3>Jupiter</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">142 984 km</span></p>
+        <p>Masse : <span class="chiffres">1,8986 x 10 ^ 27 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-161 °C ... -108 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">591 000 000 km ... 965 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">4 332,01 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">79</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">9 h 57 min 27,3 s</span></p>
     </div>
     <div class="bgimg-jupiter"></div>
 
     <div class="div-expl" id="saturne">
         <h3>Saturne</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">120 536 km</span></p>
+        <p>Masse : <span class="chiffres">568,46 x 10 ^ 24 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-161 °C ... -108 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">1 200 000 000 km ... 1 346 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">10 754 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">200</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">10 h 33 min</span></p>
     </div>
     <div class="bgimg-saturne"></div>
 
     <div class="div-expl" id="uranus">
         <h3>Uranus</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">51 118 km</span></p>
+        <p>Masse : <span class="chiffres">8,6810 x 10 ^ 25 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-197 °C ... -220 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">2 600 000 000 km ... 3 156 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">30 698 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">27</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">17 h 14 min</span></p>
     </div>
     <div class="bgimg-uranus"></div>
 
     <div class="div-expl" id="neptune">
         <h3>Neptune</h3>
-        <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+        <p>Diamètre : <span class="chiffres">49 528 km</span></p>
+        <p>Masse : <span class="chiffres">102,43 x 10 ^ 24 kg</span></p>
+        <p>Température à la surface : <span class="chiffres">-218 °C ... -201 °C</span></p>
+        <p>Distance de la Terre : <span class="chiffres">4 350 000 000 km ... 4 650 000 000 km</span></p>
+        <p>Période de révolution : <span class="chiffres">60 216,8 jours</span></p>
+        <p>Nombre de satellites : <span class="chiffres">14</span></p>
+        <p>Période de rotation (jour sidéral) : <span class="chiffres">16 h 4 min</span></p>
     </div>
     <div class="bgimg-neptune"></div>
 </body>
