ancre haut de page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#haut">Haut</a></li>
             <li><a href="#soleil">Soleil</a></li>
             <li><a href="#mercure">Mercure</a></li>
             <li><a href="#venus">Vénus</a></li>
@@ -24,6 +23,12 @@
             <li><a href="#neptune">Neptune</a></li>
         </ul>
     </nav>
+
+    <div>
+        <a href="#haut">
+            <img src="img/satellite.png" alt="satellite" style="width:3%;position:fixed;top:0;left:1%;z-index:30;">
+        </a>
+    </div>
 
     <div class="bgimg-systeme_solaire" id="haut">
         <div class="caption">
