--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="div-expl" id="soleil">
-        <h3>Soleil</h3>
+        <h3><span class="btn">Soleil</span></h3>
         <p>Diamètre : <span class="chiffres">1 392 684 km</span></p>
         <p>Masse : <span class="chiffres">1,9891 x 10 ^ 30 kg</span></p>
         <p>Température à la surface : <span class="chiffres">5 500 °C</span></p>
@@ -46,7 +46,7 @@
     <div class="bgimg-soleil"></div>
 
     <div class="div-expl" id="mercure">
-        <h3>Mercure</h3>
+        <h3><span class="btn">Mercure</span></h3>
         <p>Diamètre : <span class="chiffres">479 km</span></p>
         <p>Masse : <span class="chiffres">3,3011 x 10 ^ 23 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-183 °C ... +427 °C</span></p>
@@ -58,7 +58,7 @@
     <div class="bgimg-mercure"></div>
 
     <div class="div-expl" id="venus">
-        <h3>Vénus</h3>
+        <h3><span class="btn">Vénus</span></h3>
         <p>Diamètre : <span class="chiffres">12 104 km</span></p>
         <p>Masse : <span class="chiffres">4,8685 x 10 ^ 24 kg</span></p>
         <p>Température à la surface : <span class="chiffres">+446 °C ... +490 °C</span></p>
@@ -70,7 +70,7 @@
     <div class="bgimg-venus"></div>
 
     <div class="div-expl" id="terre">
-        <h3>Terre</h3>
+        <h3><span class="btn">Terre</span></h3>
         <p>Diamètre : <span class="chiffres">12 756 km</span></p>
         <p>Masse : <span class="chiffres">5,9736 x 10 ^ 24 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-93,2 °C ... +56,7 °C</span></p>
@@ -81,7 +81,7 @@
     <div class="bgimg-terre"></div>
 
     <div class="div-expl" id="mars">
-        <h3>Mars</h3>
+        <h3><span class="btn">Mars</span></h3>
         <p>Diamètre : <span class="chiffres">6 792 km</span></p>
         <p>Masse : <span class="chiffres">6,4185 x 10 ^ 23 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-143 °C ... +20 °C</span></p>
@@ -93,7 +93,7 @@
     <div class="bgimg-mars"></div>
 
     <div class="div-expl" id="jupiter">
-        <h3>Jupiter</h3>
+        <h3><span class="btn">Jupiter</span></h3>
         <p>Diamètre : <span class="chiffres">142 984 km</span></p>
         <p>Masse : <span class="chiffres">1,8986 x 10 ^ 27 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-161 °C ... -108 °C</span></p>
@@ -105,7 +105,7 @@
     <div class="bgimg-jupiter"></div>
 
     <div class="div-expl" id="saturne">
-        <h3>Saturne</h3>
+        <h3><span class="btn">Saturne</span></h3>
         <p>Diamètre : <span class="chiffres">120 536 km</span></p>
         <p>Masse : <span class="chiffres">568,46 x 10 ^ 24 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-161 °C ... -108 °C</span></p>
@@ -117,7 +117,7 @@
     <div class="bgimg-saturne"></div>
 
     <div class="div-expl" id="uranus">
-        <h3>Uranus</h3>
+        <h3><span class="btn">Uranus</span></h3>
         <p>Diamètre : <span class="chiffres">51 118 km</span></p>
         <p>Masse : <span class="chiffres">8,6810 x 10 ^ 25 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-197 °C ... -220 °C</span></p>
@@ -129,7 +129,7 @@
     <div class="bgimg-uranus"></div>
 
     <div class="div-expl" id="neptune">
-        <h3>Neptune</h3>
+        <h3><span class="btn">Neptune</span></h3>
         <p>Diamètre : <span class="chiffres">49 528 km</span></p>
         <p>Masse : <span class="chiffres">102,43 x 10 ^ 24 kg</span></p>
         <p>Température à la surface : <span class="chiffres">-218 °C ... -201 °C</span></p>
