--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     </div>
 
     <div class="bgimg-systeme_solaire" id="haut">
-        <div class="caption">
-            <span class="border1" data-text="SYSTEME SOLAIRE">SYSTEME SOLAIRE</span>
+        <div class="fill-effect">
+            <h1 class="fill-effect-stroke">SYSTEME SOLAIRE</h1>
+            <h1 class="fill-effect-fill">SYSTEME SOLAIRE</h1>
         </div>
     </div>
+
 
     <div class="div-expl" id="soleil">
         <h3><span class="btn">Soleil</span></h3>
