--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
         </ul>
     </nav>
 
-    <div>
+    <div class="satellite">
         <a href="#haut">
-            <img src="img/satellite.png" alt="satellite" style="width:3%;position:fixed;top:0;left:1%;z-index:30;">
+            <img src="img/satellite.png" alt="satellite">
         </a>
+    </div>
+
+    <div class="menu_responsive">
+        <a href="#soleil">Soleil</a>
+        <a href="#mercure">Mercure</a>
+        <a href="#venus">Vénus</a>
+        <a href="#terre">Terre</a>
+        <a href="#mars">Mars</a>
+        <a href="#jupiter">Jupiter</a>
+        <a href="#saturne">Saturne</a>
+        <a href="#uranus">Uranus</a>
+        <a href="#neptune">Neptune</a>
     </div>
 
     <div class="bgimg-systeme_solaire" id="haut">
