ajust css responsive

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     <div class="div-expl" id="soleil">
-        <h3><span class="btn">Soleil</span></h3>
+        <h3 id="spansoleil"><span class="btn">Soleil</span></h3>
         <div class="div1">
             <div class="div2">
                 <p>Diamètre : <span class="chiffres">1 392 684 km</span></p>
