--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#saturne">Saturne</a></li>
             <li><a href="#uranus">Uranus</a></li>
             <li><a href="#neptune">Neptune</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -40,6 +41,7 @@
         <a href="#saturne">Saturne</a>
         <a href="#uranus">Uranus</a>
         <a href="#neptune">Neptune</a>
+        <a href="#contact">Contact</a>
     </div>
 
     <div class="bgimg-systeme_solaire" id="haut">
@@ -234,6 +236,12 @@
         </div>
     </div>
     <div class="bgimg-neptune"></div>
+
+    <div class="div-expl" id="contact">
+        <h3><span class="btn">Contact</span></h3>
+        <h4>guillaume.queste@laposte.net</h4>
+        <a href="http://www.guillaumequeste.fr" class="lienPortfolio" target="_blank">http://www.guillaumequeste.fr</a>
+    </div>
 </body>
 
 </html>
